--- a/home2.html
+++ b/home2.html
@@ -225,7 +225,7 @@
         <header>
             <h1 class="header">THE FUTURE <br> OF <span>ELEARING</span>:</h1>
         </header>
-        <a href="backEnd.html" style="display: contents;"><img src="images/favicon.png" class="landinglogo" /></a>
+        <a href="frontend.html" style="display: contents;"><img src="images/favicon.png" class="landinglogo" /></a>
         <h2 class="homeh2"><hr>SHINING BRIGHT TUTORS: CREATING BRIGHT FUTURES<hr></h2>
 
         <div class="home2-sec4">
