--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <header class="u-clearfix u-header u-header" id="sec-9623">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a
-          href="frontend.html"
+          href="login.html"
           class="u-image u-logo u-image-1"
           data-image-width="256"
           data-image-height="191"
