--- a/backEnd.html
+++ b/backEnd.html
@@ -20,5 +20,6 @@
 <a href="index.html" class="pageButton">Home Page</a>
 
 <a href="home2.html" class="pageButton">Home 2.0</a>  
+<a href="About2.0.html" class="pageButton">About 2.0</a>  
 </body>
 </html>
