--- a/home2.html
+++ b/home2.html
@@ -52,6 +52,19 @@
     <meta property="og:type" content="website" />
   </head>
   <body class="u-body u-xl-mode home2">
+    <style>
+    .hero{
+     position: relative;
+      width: 100%;
+      height: 100%;
+    }
+.video-bg{
+  position: absolute;
+}
+    </style>
+    <div class="hero">
+      <video  class="video-bg" autoplay muted loop > <source src="https://video-public.canva.com/VAEXazshK64/v/3229262fa4.mp4"></video>
+    </div>
     <header class="u-clearfix u-header u-header" id="sec-9623">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a
@@ -103,10 +116,10 @@
                   href="/.html"
                   style="padding: 10px 20px"
                   >
+                  <!-- <span></span>
                   <span></span>
                   <span></span>
-                  <span></span>
-                  <span></span>
+                  <span></span> -->
                   Home</a
                 >
               </li>
@@ -115,10 +128,7 @@
                   class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
                   href="About.html"
                   style="padding: 10px 20px"
-                  ><span></span>
-                  <span></span>
-                  <span></span>
-                  <span></span>
+                  >
                   About</a
                 >
               </li>
@@ -127,10 +137,7 @@
                   class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
                   href="Contact.html"
                   style="padding: 10px 20px"
-                  ><span></span>
-                  <span></span>
-                  <span></span>
-                  <span></span>
+                  >
                   Contact</a
                 >
               </li>
@@ -140,10 +147,7 @@
                   href="Services.html"
                   style="padding: 10px 20px"
                   >
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                  <span></span>
+                 
                   Services</a
                 >
               </li>
@@ -153,10 +157,7 @@
                   href="Rates.html"
                   style="padding: 10px 20px"
                   >
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                  <span></span>
+                 
                   Sign in</a
                 >
               </li>
@@ -166,10 +167,10 @@
                   href="FAQs.html"
                   style="padding: 10px 20px"
                   >
+                  <!-- <span></span>
                   <span></span>
                   <span></span>
-                  <span></span>
-                  <span></span>
+                  <span></span> -->
                   FAQ's</a
                 >
               </li>
