--- a/spElementary.html
+++ b/spElementary.html
@@ -9,6 +9,8 @@
     <title>Services</title>
     <link rel="stylesheet" href="nicepage.css" media="screen" />
     <link rel="stylesheet" href="Services.css" media="screen" />
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script">
     <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link
       rel="stylesheet"
@@ -46,6 +48,7 @@
     <meta property="og:type" content="website" />
   </head>
   <body class="u-body u-xl-mode">
+    
     <header class="u-clearfix u-header u-header" id="sec-9623">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a
@@ -186,7 +189,40 @@
         </nav>
       </div>
     </header>
-<h1>Elementary School Tutorting</h1>
+
+    <style>
+      .hero{
+        display: flex;
+        flex-direction: column;
+      }
+      .side-hero-logo{
+        width: 100px;
+      }   
+      .icon-1st{
+        width: 100px;
+      } 
+      .hero-header{
+        font-family: "Petit Formal Script";
+        font-size: 48px;
+        color: #8e64c9;
+      }
+      </style>
+    <div class="hero">
+      <img src="images/side logo for services.jpg" alt="" class="side-hero-logo">
+      <h1 class="hero-header">Elementary School Tutoring</h1>
+      <img class="icon-1st" crossorigin="anonymous" src="https://media-public.canva.com/b92yo/MAD_Trb92yo/1/t.png" draggable="false" alt="Hand Drawn Girl Saying Hello to Her Online Class" style="object-fit: fill;">
+      <p>
+        Petit Formal Script
+        Are you seeking extra assistance for your elementary school child (grades
+        K-5) in the classroom? Look no further! Shining Bright Tutors is a company
+        that focuses on providing support to elementary-aged students in various
+        subjects, such as Phonics, Reading, Writing, Spelling, Grammar, Math,
+        Social Studies, and Science through virtual sessions. We offer a range of
+        customized packages to meet your needs. If you can't find a package that
+        fits your specific requirements or want one tailored to your child's
+        needs, feel free to contact us!
+      </p>
+    </div>
 
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
