--- a/spElementary.html
+++ b/spElementary.html
@@ -9,8 +9,10 @@
     <title>Services</title>
     <link rel="stylesheet" href="nicepage.css" media="screen" />
     <link rel="stylesheet" href="Services.css" media="screen" />
-    <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script"
+    />
     <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link
       rel="stylesheet"
@@ -48,7 +50,6 @@
     <meta property="og:type" content="website" />
   </head>
   <body class="u-body u-xl-mode">
-    
     <header class="u-clearfix u-header u-header" id="sec-9623">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a
@@ -191,38 +192,48 @@
     </header>
 
     <style>
-      .hero{
+      .hero {
         display: flex;
-        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        position: relative;
       }
-      .side-hero-logo{
-        width: 100px;
-      }   
-      .icon-1st{
-        width: 100px;
-      } 
-      .hero-header{
-        font-family: "Petit Formal Script";
-        font-size: 48px;
+      .side-hero-logo {
+        width: 10%;
+        height: 70%;
+        position: absolute;
+        top: 0;
+        left: 8%;
+      }
+      .icon-1st {
+        width: 170px;
+      }
+      .hero-header {
+        font-family: 'Petit Formal Script';
+        font-size: 50px;
         color: #8e64c9;
+        align-self: end;
+        margin-left: 350px;
       }
 
-      .hero-paragraph{
+      .hero-paragraph {
         color: #8e64c9;
-        margin: 300px;
+        flex-basis: 69%;
+        align-self: end;
+        margin-left: 150px;
       }
 
-      .package{
+      .package {
         display: flex;
-        margin: 100px 250px;
+        margin: 100px;
         justify-content: space-between;
         gap: 15px;
       }
-      .package-list{
+      .package-list {
         display: flex;
         flex-direction: column;
         align-items: center;
-        min-width: 250px;
+        min-width: 180px;
         box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
         border: 2px solid #ec5db55e;
         border-radius: 10px;
@@ -230,14 +241,14 @@
         padding: 10px;
         color: #8e64c9;
       }
-      .package-header{
-        font-family: "Petit Formal Script";
+      .package-header {
+        font-family: 'Petit Formal Script';
         transform: rotate(345deg);
       }
-      .package-header-font{
+      .package-header-font {
         font-size: 45px;
       }
-      .package-button{
+      .package-button {
         border: 2px solid #8e64c9;
         color: #ec5db5;
         border-radius: 20px;
@@ -246,50 +257,191 @@
         text-align: center;
         text-decoration: underline;
       }
-      </style>
+      ul:not(.u-unstyled) {
+        margin-top: 20px;
+        margin-bottom: 22px;
+      }
+      .bottom-note {
+        color: #8e64c9;
+        text-align: center;
+      }
+
+      @media (max-width: 1240px) {
+        .side-hero-logo {
+          width: 15%;
+          height: 45%;
+          left: 5%;
+        }
+        h1:not(.u-title) {
+          font-size: 40px;
+        }
+        .hero-header {
+          margin-left: 220px;
+        }
+
+        .package-list {
+          min-width: 156px;
+          justify-content: flex-end;
+        }
+        .package-header-font {
+          font-size: 35px;
+        }
+        p {
+          font-size: 12px;
+        }
+      }
+
+      @media (max-width: 1024px) {
+        .side-hero-logo {
+          width: 22%;
+          height: 36%;
+          left: 5%;
+        }
+        h1:not(.u-title) {
+          font-size: 25px;
+        }
+        .icon-1st {
+          width: 80px;
+        }
+        .side-hero-logo {
+          width: 16%;
+          height: 40%;
+          left: 9%;
+          top: 12%;
+        }
+        .package {
+          display: flex;
+          margin: 0px;
+          justify-content: center;
+          gap: 15px;
+          flex-wrap: wrap;
+        }
+        h4 {
+          font-size: 1rem;
+        }
+        .package-header-font {
+          font-size: 25px;
+        }
+        .package-list {
+          max-width: 225px;
+        }
+      }
+
+      @media (max-width: 768px) {
+        .hero-header {
+          margin-left: 25px;
+        }
+        .side-hero-logo {
+         display: none;
+        }
+        .icon-1st {
+          width: 60px;
+          height: 50px;
+          margin-right: 10px;
+        }
+        .hero-paragraph {
+          color: #8e64c9;
+          flex-basis: 68%;
+          align-self: end;
+          margin-left: 35px;
+        }
+
+      }
+
+      @media (max-width: 480px) {
+        .hero-header {
+          margin-left: 0px;
+        }
+        .icon-1st {
+          width: 120px;
+          height: 70px;
+        }
+      }
+    </style>
     <div class="hero">
-      <img src="images/side logo for services.jpg" alt="" class="side-hero-logo">
+      <img
+        src="images/side logo for services.jpg"
+        alt=""
+        class="side-hero-logo"
+      />
       <h1 class="hero-header">Elementary School Tutoring</h1>
-      <img class="icon-1st" crossorigin="anonymous" src="https://media-public.canva.com/b92yo/MAD_Trb92yo/1/t.png" draggable="false" alt="Hand Drawn Girl Saying Hello to Her Online Class" style="object-fit: fill;">
+      <img
+        class="icon-1st"
+        crossorigin="anonymous"
+        src="https://media-public.canva.com/b92yo/MAD_Trb92yo/1/t.png"
+        draggable="false"
+        alt="Hand Drawn Girl Saying Hello to Her Online Class"
+        style="object-fit: fill"
+      />
       <p class="hero-paragraph">
-        Petit Formal Script
-        Are you seeking extra assistance for your elementary school child (grades
-        K-5) in the classroom? Look no further! Shining Bright Tutors is a company
-        that focuses on providing support to elementary-aged students in various
-        subjects, such as Phonics, Reading, Writing, Spelling, Grammar, Math,
-        Social Studies, and Science through virtual sessions. We offer a range of
-        customized packages to meet your needs. If you can't find a package that
-        fits your specific requirements or want one tailored to your child's
-        needs, feel free to contact us!
+        Petit Formal Script Are you seeking extra assistance for your elementary
+        school child (grades K-5) in the classroom? Look no further! Shining
+        Bright Tutors is a company that focuses on providing support to
+        elementary-aged students in various subjects, such as Phonics, Reading,
+        Writing, Spelling, Grammar, Math, Social Studies, and Science through
+        virtual sessions. We offer a range of customized packages to meet your
+        needs. If you can't find a package that fits your specific requirements
+        or want one tailored to your child's needs, feel free to contact us!
       </p>
     </div>
-<ul class="package">
-  <li class="package-list">
-    <h4 class="package-header package-header-font">Hourly</h4>
-    <p>Don't know how many hours you need or want to pay for one hour at a time? Choose this hourly rate. $45/hr.</p>
-    <a href="" class="package-button">Select</a>
-  </li>
-  <li class="package-list">
-    <h4 class="package-header">5 Hour <br> Package</h4>
-    <p>Don't know how many hours you need or want to pay for one hour at a time? Choose this hourly rate. $45/hr.</p>
-    <a href="" class="package-button">Select</a>
-  </li>
-  <li class="package-list">
-    <h4 class="package-header">10 Hour <br> Package</h4>
-    <p>Don't know how many hours you need or want to pay for one hour at a time? Choose this hourly rate. $45/hr.</p>
-    <a href="" class="package-button">Select</a>
-  </li>
-  <li class="package-list">
-    <h4 class="package-header">15 Hour <br> Package</h4>
-    <p>Don't know how many hours you need or want to pay for one hour at a time? Choose this hourly rate. $45/hr.</p>
-    <a href="" class="package-button">Select</a>
-  </li>
-  <li class="package-list">
-    <h4 class="package-header">20 Hour <br> Package</h4>
-    <p>Don't know how many hours you need or want to pay for one hour at a time? Choose this hourly rate. $45/hr.</p>
-    <a href="" class="package-button">Select</a>
-  </li>
-</ul>
+    <ul class="package">
+      <li class="package-list">
+        <h4 class="package-header package-header-font">Hourly</h4>
+        <p>
+          Don't know how many hours you need or want to pay for one hour at a
+          time? Choose this hourly rate. $45/hr.
+        </p>
+        <a href="" class="package-button">Select</a>
+      </li>
+      <li class="package-list">
+        <h4 class="package-header">
+          5 Hour <br />
+          Package
+        </h4>
+        <p>
+          Don't know how many hours you need or want to pay for one hour at a
+          time? Choose this hourly rate. $45/hr.
+        </p>
+        <a href="" class="package-button">Select</a>
+      </li>
+      <li class="package-list">
+        <h4 class="package-header">
+          10 Hour <br />
+          Package
+        </h4>
+        <p>
+          Don't know how many hours you need or want to pay for one hour at a
+          time? Choose this hourly rate. $45/hr.
+        </p>
+        <a href="" class="package-button">Select</a>
+      </li>
+      <li class="package-list">
+        <h4 class="package-header">
+          15 Hour <br />
+          Package
+        </h4>
+        <p>
+          Don't know how many hours you need or want to pay for one hour at a
+          time? Choose this hourly rate. $45/hr.
+        </p>
+        <a href="" class="package-button">Select</a>
+      </li>
+      <li class="package-list">
+        <h4 class="package-header">
+          20 Hour <br />
+          Package
+        </h4>
+        <p>
+          Don't know how many hours you need or want to pay for one hour at a
+          time? Choose this hourly rate. $45/hr.
+        </p>
+        <a href="" class="package-button">Select</a>
+      </li>
+    </ul>
+    <p class="bottom-note">
+      ***Please note: When you click pay now, payment is taken through stripe
+      and the convenience fee is included in the final price.***
+    </p>
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
       id="sec-1144"
