--- a/backEnd.html
+++ b/backEnd.html
@@ -23,5 +23,6 @@
 <a href="About2.0.html" class="pageButton">About 2.0</a>  
 <a href="Contact3.0.html" class="pageButton">Contact 3.0</a>  
 <a href="Services 2.0.html" class="pageButton">Services 2.0</a>  
+<a href="FAQs 2.0.html" class="pageButton">FAQ 2.0</a>  
 </body>
 </html>
