--- a/backEnd.html
+++ b/backEnd.html
@@ -9,20 +9,34 @@
     <title>Back End</title>
 </head>
 <body class="backEnd">
-    <a
-    href="frontend.html"
-    class="loginA"
-  >
-    <img src="images/logosmall.png" class="u-logo-image u-logo-image-1 loginLogo" />
-</a>
-<h1 class="topLogo">Dynamic BackEnd</h1>
+  <style>
+    .a-style {
+       display: flex;
+       flex-wrap: wrap;
+       justify-content: center;
+   }
+   .header{
+    font-size: 64px;
+   }
+   </style>
+    <div class="a-style">
+      <a
+      href="frontend.html"
+      class="loginA"
+        >
+      <img src="images/logosmall.png" class="u-logo-image u-logo-image-1 loginLogo" />
+      </a>
+      <h1 class="header">Dynamic BackEnd</h1>
+    </div>
 
-<a href="index.html" class="pageButton">Home Page</a>
-
-<a href="home2.html" class="pageButton">Home 2.0</a>  
-<a href="About2.0.html" class="pageButton">About 2.0</a>  
-<a href="Contact3.0.html" class="pageButton">Contact 3.0</a>  
-<a href="Services 2.0.html" class="pageButton">Services 2.0</a>  
-<a href="FAQs 2.0.html" class="pageButton">FAQ 2.0</a>  
+<div class="a-style">
+  <a href="index.html" class="pageButton">Home Page</a>
+  
+  <a href="home2.html" class="pageButton">Home 2.0</a>
+  <a href="About2.0.html" class="pageButton">About 2.0</a>
+  <a href="Contact3.0.html" class="pageButton">Contact 3.0</a>
+  <a href="Services 2.0.html" class="pageButton">Services 2.0</a>
+  <a href="FAQs 2.0.html" class="pageButton">FAQ 2.0</a>
+</div>
 </body>
 </html>
