--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -248,6 +248,8 @@
         transform: perspective(1000px) rotateY(-180deg);
         transition: 1s;
         z-index: 1;
+        box-shadow: 5px 6px 5px 1px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
       }
       .box:hover .back {
         transform: perspective(1000px) rotateY(0deg);
