--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -191,6 +191,7 @@
         width: 100%;
         height: 83vh;
         position: relative;
+        display: flex;
       }
       .top-image {
         position: absolute;
@@ -207,6 +208,12 @@
       .faq-wrapper {
         display: flex;
         flex-direction: column;
+      }
+      .faq-wrapper-middle {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
       }
       .faq-bubble {
         list-style: none;
@@ -343,6 +350,187 @@
     <div class="hero">
       <img src="images/badge logo.png" alt="" class="top-image" />
 
+      <ul class="faq-wrapper">
+        <li class="box">
+          <div class="front">
+            <div class="center">
+              <h1>
+                Where does <br />
+                tutoring take <br />
+                place?
+              </h1>
+            </div>
+          </div>
+          <div class="back">
+            <div class="row">
+              <img src="images/logo small.png" alt="" />
+              <h1>Where does tutoring take place?</h1>
+            </div>
+            <div class="row">
+              <span
+                >Tutoring sessions typically take place in a virtual setting.
+                You will meet with your tutor either through Google Meet or
+                Zoom. When you log in to your portal and check your calendar,
+                you will be able to access the session link there.</span
+              >
+            </div>
+          </div>
+        </li>
+        <li class="box">
+          <div class="front">
+            <div class="center">
+              <h1>
+                Are you able <br />
+                tutor in <br />
+                person?
+              </h1>
+            </div>
+          </div>
+          <div class="back">
+            <div class="row">
+              <img src="images/logo small.png" alt="" />
+              <h1>Are you able to tutor in person?</h1>
+            </div>
+            <div class="row">
+              <span
+                >At this time, in person tutoring is only available in the
+                Austin area. If you are in austin or surrounding areas, in
+                person tutoring is limited and slots fill up quickly. All in
+                person tutoring incurs an additional fee. Please contact us to
+                see if we can accommodate your in person needs.</span
+              >
+            </div>
+          </div>
+        </li>
+        <li class="box">
+          <div class="front">
+            <div class="center">
+              <h1>
+                What do I <br />
+                need for <br />
+                tutoring?
+              </h1>
+            </div>
+          </div>
+          <div class="back">
+            <div class="row">
+              <img src="images/logo small.png" alt="" />
+              <h1>What do I need for tutoring?</h1>
+            </div>
+            <div class="row">
+              <span
+                >Our platform is web based, therefore it works anywhere that has
+                internet access. This includes on a phone, ipad/tablet, laptop,
+                etc. Ideally a laptop would work best. You will also need a
+                strong internet connection.</span
+              >
+            </div>
+          </div>
+        </li>
+      </ul>
+      <ul class="faq-wrapper-middle">
+        <li class="box">
+          <div class="front">
+            <div class="center">
+              <h1>
+                Where does <br />
+                tutoring take <br />
+                place?
+              </h1>
+            </div>
+          </div>
+          <div class="back">
+            <div class="row">
+              <img src="images/logo small.png" alt="" />
+              <h1>Where does tutoring take place?</h1>
+            </div>
+            <div class="row">
+              <span
+                >Tutoring sessions typically take place in a virtual setting.
+                You will meet with your tutor either through Google Meet or
+                Zoom. When you log in to your portal and check your calendar,
+                you will be able to access the session link there.</span
+              >
+            </div>
+          </div>
+        </li>
+        <li class="box">
+          <div class="front">
+            <div class="center">
+              <h1>
+                Are you able <br />
+                tutor in <br />
+                person?
+              </h1>
+            </div>
+          </div>
+          <div class="back">
+            <div class="row">
+              <img src="images/logo small.png" alt="" />
+              <h1>Are you able to tutor in person?</h1>
+            </div>
+            <div class="row">
+              <span
+                >At this time, in person tutoring is only available in the
+                Austin area. If you are in austin or surrounding areas, in
+                person tutoring is limited and slots fill up quickly. All in
+                person tutoring incurs an additional fee. Please contact us to
+                see if we can accommodate your in person needs.</span
+              >
+            </div>
+          </div>
+        </li>
+        <li class="box">
+          <div class="front">
+            <div class="center">
+              <h1>
+                What do I <br />
+                need for <br />
+                tutoring?
+              </h1>
+            </div>
+          </div>
+          <div class="back">
+            <div class="row">
+              <img src="images/logo small.png" alt="" />
+              <h1>What do I need for tutoring?</h1>
+            </div>
+            <div class="row">
+              <span
+                >Our platform is web based, therefore it works anywhere that has
+                internet access. This includes on a phone, ipad/tablet, laptop,
+                etc. Ideally a laptop would work best. You will also need a
+                strong internet connection.</span
+              >
+            </div>
+          </div>
+        </li>
+        <li class="box">
+          <div class="front">
+            <div class="center">
+              <h1>
+                What do I <br />
+                need for <br />
+                tutoring?
+              </h1>
+            </div>
+          </div>
+          <div class="back">
+            <div class="row">
+              <img src="images/logo small.png" alt="" />
+              <h1>What do I need for tutoring?</h1>
+            </div>
+            <div class="row">
+              <span
+                >Our platform is web based, therefore it works anywhere that has
+                internet access. This includes on a phone, ipad/tablet, laptop,
+                etc. Ideally a laptop would work best. You will also need a
+                strong internet connection.</span
+              >
+            </div>
+          </div>
+        </li>
+      </ul>
       <ul class="faq-wrapper">
         <li class="box">
           <div class="front">
