--- a/spElementary.html
+++ b/spElementary.html
@@ -374,7 +374,7 @@
         style="object-fit: fill"
       />
       <p class="hero-paragraph">
-        Petit Formal Script Are you seeking extra assistance for your elementary
+        Are you seeking extra assistance for your elementary
         school child (grades K-5) in the classroom? Look no further! Shining
         Bright Tutors is a company that focuses on providing support to
         elementary-aged students in various subjects, such as Phonics, Reading,
