--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -236,8 +236,10 @@
         width: 60%;
         height: 75%;
         border-radius: 50%;
-        background: #f6be00;
-        border: 2px solid #fe4f02;
+        /* background: #f6be00; */
+        background: white;
+        /* border: 2px solid #fe4f02; */
+        border: 2px solid black;
         backface-visibility: hidden;
         transform: perspective(1000px) rotateY(0deg);
         transition: 1s;
