--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -238,8 +238,8 @@
         border-radius: 50%;
         /* background: #f6be00; */
         background: white;
-        /* border: 2px solid #fe4f02; */
-        border: 4px solid black;
+        border: 4px solid #fe4f02;
+        /* border: 4px solid black; */
         backface-visibility: hidden;
         transform: perspective(1000px) rotateY(0deg);
         transition: 1s;
