--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -236,10 +236,10 @@
         width: 60%;
         height: 75%;
         border-radius: 50%;
-        /* background: #f6be00; */
-        background: white;
-        border: 2px solid #fe4f02;
-        /* border: 4px solid black; */
+        background: #ec5db53f;
+        /* background: white; */
+        /* border: 2px solid #fe4f02; */
+        border: 4px solid #9063cd;
         backface-visibility: hidden;
         transform: perspective(1000px) rotateY(0deg);
         transition: 1s;
@@ -278,7 +278,7 @@
       }
       .box .front .center h1 {
         font-size: 25px;
-        color: #ec5db5;
+        color: #9063cd;
         white-space: nowrap;
         text-decoration: underline;
       }
