--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -236,7 +236,7 @@
         width: 60%;
         height: 75%;
         border-radius: 50%;
-        background: #ec5db53f;
+        background: #f6d2e8;
         /* background: white; */
         /* border: 2px solid #fe4f02; */
         border: 4px solid #9063cd;
