--- a/Rates.html
+++ b/Rates.html
@@ -204,7 +204,7 @@
  <p>Sign in to your account to access your profile, history, and access your tutoring session.</p>
  <div class="sign-in-btn">
    <a
-   href="https://shiningbrighttutors.tutorwithpearl.com/"
+   href="https://app.tutorbird.com/Default.aspx"
    class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1 u-btn-req"
    target="_blank"
    >Sign in</a
@@ -271,3 +271,4 @@
   </footer>
   </body>
 </html>
+<script type='text/javascript' src='https://app.tutorbird.com/Widget/v2/Login.ashx'></script>
