--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html style="font-size: 16px">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta name="keywords" content="Facts &amp;amp; Questions" />
@@ -317,21 +323,23 @@
         color: white;
         white-space: nowrap;
         display: inline-block;
-        font-family: cursive;
+        font-family: 'Gloria Hallelujah', cursive;
+        text-transform: uppercase;
       }
       .box .back .row span {
         position: relative;
         display: block;
-        font-size: 20px;
+        font-size: 22px;
         color: #fff;
         box-sizing: border-box;
         padding: 0 0 0 35px;
         margin-bottom: 5px;
-        font-family: cursive;
+        font-family: 'Gloria Hallelujah', cursive;
+        text-transform: uppercase;
       }
       .box .back .row span::before {
         content: '';
-        font-family: cursive;
+        font-family: ananias;
         position: absolute;
         top: 2px;
         bottom: 2px;
