--- a/Rates copy.html
+++ b/Rates copy.html
@@ -20,6 +20,7 @@
       src="jquery.js"
       defer=""
     ></script>
+    
     <script
       class="u-script"
       type="text/javascript"
@@ -46,6 +47,7 @@
         "logo": "images/logosmall.png"
       }
     </script>
+   
     <meta name="theme-color" content="#478ac9" />
     <meta property="og:title" content="Rates" />
     <meta property="og:type" content="website" />
@@ -193,25 +195,13 @@
         </nav>
       </div>
     </header>
-    <section class="u-align-center u-clearfix u-section-1" id="carousel_b9b9">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h2
-          class="u-custom-font u-font-montserrat u-text u-text-default u-text-1"
-        >
- <img src="images/logo side badge.png" alt="" class="top-image">
- <h2>Portal SIGN IN</h2>
- <hr class="protal-hr">
- <p>Sign in to your account to access your profile, history, and access your tutoring session.</p>
- <div class="sign-in-btn">
-   <a
-   href="https://app.tutorbird.com/Default.aspx"
-   class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1 u-btn-req"
-   target="_blank"
-   >Sign in</a
-   >
- </div>
-    </section>
-
+    <style>
+      .sb_registration{
+        margin-top: 10px;
+      }
+    </style>
+     <script type='text/javascript' src='https://app.tutorbird.com/Widget/v3/Registration.ashx?id=sch_TVbJz' class='sb_registration'></script>
+    <!-- <script type='text/javascript' src='https://app.tutorbird.com/Widget/v2/Login.ashx'></script> -->
     <footer
     class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
     id="sec-1144"
@@ -271,5 +261,4 @@
   </footer>
   </body>
 </html>
-<!-- <script type='text/javascript' src='https://app.tutorbird.com/Widget/v2/Login.ashx'></script>
-<script type='text/javascript' src='https://app.tutorbird.com/Widget/v3/Registration.ashx?id=sch_TVbJz' class='sb_registration'></script> -->
+
