--- a/Rates copy.html
+++ b/Rates copy.html
@@ -201,7 +201,7 @@
       }
     </style>
      <script type='text/javascript' src='https://app.tutorbird.com/Widget/v3/Registration.ashx?id=sch_TVbJz' class='sb_registration'></script>
-    <!-- <script type='text/javascript' src='https://app.tutorbird.com/Widget/v2/Login.ashx'></script> -->
+    <script type='text/javascript' src='https://app.tutorbird.com/Widget/v2/Login.ashx'></script>
     <footer
     class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
     id="sec-1144"
