--- a/backEnd.html
+++ b/backEnd.html
@@ -37,6 +37,7 @@
   <a href="Contact3.0.html" class="pageButton">Contact 3.0</a>
   <a href="Services 2.0.html" class="pageButton">Services 2.0</a>
   <a href="FAQs 2.0.html" class="pageButton">FAQ 2.0</a>
+  <a href="Rates copy.html" class="pageButton">signin and login 2.0</a>
 </div>
 </body>
 </html>
