--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -198,6 +198,8 @@
         height: 83vh;
         position: relative;
         display: flex;
+        justify-content: center;
+        gap: 70px
       }
       .top-image {
         position: absolute;
@@ -207,19 +209,23 @@
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: -1;
-        opacity: 0.2;
-        filter: hue-rotate(20deg);
+        /* opacity: 0.4; */
+        filter: brightness(187%)
       }
 
       .faq-wrapper {
         display: flex;
         flex-direction: column;
+        gap: 15px;
       }
       .faq-wrapper-middle {
         display: flex;
-        align-items: center;
         flex-wrap: wrap;
         justify-content: center;
+        width: 45%;
+        gap: 65px;
+        align-content: center;
+        
       }
       .faq-bubble {
         list-style: none;
@@ -231,21 +237,25 @@
         border-radius: 50%;
         color: #ec5db5;
       }
+      .faq-wrapper-middle .box:nth-of-type(1), .faq-wrapper-middle .box:nth-of-type(3){
+        margin-top: 185px;
+      }
+
+      .faq-wrapper-middle .box:nth-of-type(4){
+        margin-top: -100px;
+      }
 
       .box {
-        width: 350px;
-        height: 265px;
-        border-radius: 10px;
-        list-style: none;
-      }
+    width: 220px;
+    height: 220px;
+    list-style: none;
+}
       .box .front {
-        width: 60%;
-        height: 75%;
+        width: 100%;
+        height: 100%;
         border-radius: 50%;
-        background: #f6d2e8;
-        /* background: white; */
-        /* border: 2px solid #fe4f02; */
-        border: 4px solid #9063cd;
+        background: #fff7e1;
+        border: 4px solid #e295c4;
         backface-visibility: hidden;
         transform: perspective(1000px) rotateY(0deg);
         transition: 1s;
@@ -284,7 +294,7 @@
       }
       .box .front .center h1 {
         font-size: 25px;
-        color: #9063cd;
+        color: #e295c4;
         white-space: nowrap;
         text-decoration: underline;
       }
@@ -347,18 +357,28 @@
         color: #fff;
         font-size: 20px;
       }
-      /* .box .back .row span:nth-of-type(1)::before {
-        font-family: cursive;
-      } */
-      /* .box .back .row span:nth-of-type(2)::before {
-        content: '\f003';
+     
+      .hero-wraper{
+        position: absolute;
+        display: flex;
       }
-      .box .back .row span:nth-of-type(3)::before {
-        content: '\f041';
-      } */
     </style>
     <div class="hero">
       <img src="images/badge logo.png" alt="" class="top-image" />
+      <div class="hero-wraper">
+        <img
+          src="images/favicon.png"
+          alt=""
+          style="
+            width: 58px;
+            height: 56px;
+            border-radius: 50%;
+            background-color: #f6c21e;
+            padding: 3px;
+          "
+        />
+        <h1 class="hero" style="padding-left: 10px">FAQs</h1>
+      </div>
 
       <ul class="faq-wrapper">
         <li class="box">
@@ -597,16 +617,20 @@
           <div class="front">
             <div class="center">
               <h1>
-                What do I <br />
-                need for <br />
-                tutoring?
+                Are 30-
+                <br />minute <br />tutoring <br />
+                sessions <br />
+                available?
               </h1>
             </div>
           </div>
           <div class="back">
             <div class="row">
               <img src="images/logo small.png" alt="" />
-              <h1>What do I need for tutoring?</h1>
+              <h1>
+                Are 30-minute tutoring <br />
+                sessions available?
+              </h1>
             </div>
             <div class="row">
               <span
