--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -495,11 +495,40 @@
         }
         .hero {
           margin-bottom: 143px;
-          height: 100vh;
+          height: 50vh;
           gap: 15px;
         }
         .faq-wrapper-middle-1 {
           flex-direction: column;
+          gap: 10px;
+          margin-bottom: 0px;
+        }
+        .faq-wrapper-middle-2 {
+          gap: 10px;
+        }
+        .hero .faq-wrapper-middle {
+          height: 37vh;
+          gap: 35px;
+        }
+
+        /* This for the back card */
+        .box .back {
+          top: 2%;
+          width: 65%;
+          height: 100%;
+        }
+        .box .back .row h1 {
+          font-size: 12px;
+          display: revert;
+          padding: 0px;
+          margin: 0;
+        }
+        .box .back .row span {
+          font-size: 12px;
+          padding: 0;
+        }
+        .box .back .row:nth-of-type(2) {
+          padding: 10px 10px;
         }
       }
     </style>
