--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -516,6 +516,7 @@
           top: 2%;
           width: 65%;
           height: 100%;
+          z-index: 3;
         }
         .box .back .row h1 {
           font-size: 12px;
