--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -516,6 +516,7 @@
           top: 2%;
           width: 65%;
           height: 100%;
+          transition: 0.5s;
           z-index: 3;
         }
         .box .back .row h1 {
